syntax = "proto3";

package helloworld;
option go_package = "github.com/arturoeanton/go-r2lang/examples/grpc/example2;helloworld";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
